--- a/CVLab/index.html
+++ b/CVLab/index.html
@@ -30,7 +30,7 @@
                     <div class="contact-me">
                         <ul>
                             <li>
-                                <a class="primary" href="mailto:weeeee@gmail.com">1991@gmail.com</a>
+                                <a class="primary" href="mailto:weeeee@gmail.com">anclerson1991@gmail.com</a>
                             </li>
                             <li>
                                 <i class="fa-brands fa-facebook primary"></i>
@@ -46,7 +46,80 @@
                 </div>
             </div>
         </section>
+        <section class="experience-block">
+            <h3 class="primary title">關鍵經驗</h3>
+            <div class="experience-item">
+                <h4>自主創業 <span class="primary">・Company Name</span> </h4>
+                <ul>
+                    <li>招募投資人: 結合青年創業理念共同的投資友人，建置Tri&Try電商，進行工裝成衣銷售
+                    </li>
+                    <li>行銷策略 : 定期於官方IG發布新產品內容以增加產品的曝光率，並分析客戶偏好，充分掌握產品導向，最終業績成長30%
+                    </li>
+                    <li>擴大銷售管道: 為增加銷售量於連結其他電商通路上架，制定滿額優惠(ex.免運)的促銷方式，鼓勵顧客邀約團購，使每筆客單量提高10%
+                    </li>
+                </ul>
+                <div class="secondary">2017.03-06</div>
+            </div>
+            <div class="experience-item">
+                <h4>專案助理 <span class="primary">・Company Name</span> </h4>
+                <ul>
+                    <li>在電腦運算思維課程專案中，讓學生能夠自行活用創用CC素材以及麻省理工研發Scratch程式</li>
+                    <li>將創用CC素材以及Scratch程式結合英語教學設計一個教學單元，並讓大四學生能夠在體育系大一英文中擔任講師</li>
+                </ul>
+                <div class="secondary">2019</div>
+            </div>
+            <div class="experience-item">
+                <h4>日本高知大學&中國文化大學跨校視訊會議 組長 <span class="primary">・Company Name</span> </h4>
+                <ul>
+                    <li>8周內的視訊專案規劃: 在課餘每周約2天內，帶領組員分配規劃視訊議題內容及問題的探討</li>
+                    <li>事前確認: 事前聯絡對方負責人確認裝置和會議的程序</li>
+                    <li>會議主持: 擔任會議主持人，同時注意議題討論的效果及時程的掌握，使順利圓滿完成兩校學術交流的視訊會議</li>
+                </ul>
+                <div class="secondary">Nov 2017 ~ May 2018</div>
+            </div>
+        </section>
+    
+<section class="education-block">
+    <h3 class="primary title">Education</h3>
+    <div class="row">
+        <div class="education-item">
+            <div class="logo"><img src="./images/TAITRA_International_Trade_Institute_logo_20160715.jpg" alt="學校logo"></div>
+            <ul>
+                <li>July 2021 ~ June 2022</li>
+                <li>外貿協會國企班</li>
+                <li>數位跨域班</li>
+            </ul>
+        <div class="education-item"></div>
+            <div class="logo"><img src="./images/intro_logo.png" alt="學校logo"></div>
+            <ul>
+                <li>Sept 2016 ~ June 2020</li>
+                <li>文化大學</li>
+                <li>英國語文學系</li>
+            </ul>
+        </div>
     </div>
+</section>
+
+<section class="others-block">
+    <div class="skill">
+        <h3 class="primary title">Skills</h3>
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+        </ul>
+    </div>
+
+    <div class="language">
+        <h3 class="primary title">Languages</h3>
+        <ul>
+            <li>中文:精通</li>
+            <li>英文:Toeic 870</li>
+            <li>日文:微懂</li>
+        </ul>
+    </div>
+</section>
 </body>
+
 
 </html>
