--- a/CVLab/index.html
+++ b/CVLab/index.html
@@ -88,7 +88,7 @@
                 <li>外貿協會國企班</li>
                 <li>數位跨域班</li>
             </ul>
-        <div class="education-item"></div>
+        <div class="education-item">
             <div class="logo"><img src="./images/intro_logo.png" alt="學校logo"></div>
             <ul>
                 <li>Sept 2016 ~ June 2020</li>
