--- a/CVLab/index.html
+++ b/CVLab/index.html
@@ -77,47 +77,49 @@
                 <div class="secondary">Nov 2017 ~ May 2018</div>
             </div>
         </section>
-    
-<section class="education-block">
-    <h3 class="primary title">Education</h3>
-    <div class="row">
-        <div class="education-item">
-            <div class="logo"><img src="./images/TAITRA_International_Trade_Institute_logo_20160715.jpg" alt="學校logo"></div>
+
+        <section class="education-block">
+            <h3 class="primary title">Education</h3>
+            <div class="row">
+            <div class="education-item">
+                    <div class="logo"><img src="./images/TAITRA_International_Trade_Institute_logo_20160715.jpg"
+                            alt="學校logo"></div>
+                    <ul>
+                        <li>July 2021 ~ June 2022</li>
+                        <li>外貿協會國企班</li>
+                        <li>數位跨域班</li>
+                    </ul>
+                </div>
+            <div class="education-item">
+                <div class="logo"><img src="./images/intro_logo.png" alt="學校logo"></div>
+                <ul>
+                    <li>Sept 2016 ~ June 2020</li>
+                    <li>文化大學</li>
+                    <li>英國語文學系</li>
+                </ul>
+            </div>
+    </div>
+    </section>
+
+    <section class="others-block">
+        <div class="skill">
+            <h3 class="primary title">Skills</h3>
             <ul>
-                <li>July 2021 ~ June 2022</li>
-                <li>外貿協會國企班</li>
-                <li>數位跨域班</li>
-            </ul>
-        <div class="education-item">
-            <div class="logo"><img src="./images/intro_logo.png" alt="學校logo"></div>
-            <ul>
-                <li>Sept 2016 ~ June 2020</li>
-                <li>文化大學</li>
-                <li>英國語文學系</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
             </ul>
         </div>
-    </div>
-</section>
 
-<section class="others-block">
-    <div class="skill">
-        <h3 class="primary title">Skills</h3>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-        </ul>
-    </div>
-
-    <div class="language">
-        <h3 class="primary title">Languages</h3>
-        <ul>
-            <li>中文:精通</li>
-            <li>英文:Toeic 870</li>
-            <li>日文:微懂</li>
-        </ul>
-    </div>
-</section>
+        <div class="language">
+            <h3 class="primary title">Languages</h3>
+            <ul>
+                <li>中文:精通</li>
+                <li>英文:Toeic 870</li>
+                <li>日文:微懂</li>
+            </ul>
+        </div>
+    </section>
 </body>
 
 
